--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@formspree/react": "^3.0.0",
     "@tailwindcss/vite": "^4.1.7",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
